Kube-ERP/custom-erpnext-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
    traefik.enable: "true"
    traefik.http.middlewares.custom-erp-nginx.headers.cr.Host: custom-erpnext-nginx
    traefik.http.routers.custom-erpnext-nginx.middlewares: custom-erpnext-nginx
    traefik.http.routers.custom-erpnext-nginx.rule: HostRegexp(`{catchall:.*}`)
    traefik.http.routers.excel-erpnext-nginx.entrypoints: web
    traefik.http.svc.custom-erp-nginx.lb.server.port: "8080"
  creationTimestamp: null
  labels:
    io.kompose.network/erpnext-offline-default: "true"
    io.kompose.service: custom-erpnext-nginx
  name: custom-erpnext-nginx
spec:
  containers:
    - env:
        - name: FRAPPE_PY
          value: erpnext-python
        - name: FRAPPE_PY_PORT
          value: "8000"
        - name: FRAPPE_SOCKETIO
          value: frappe-socketio
        - name: SOCKETIO_PORT
          value: "9000"
      image: shrdc/custom-erpnext-nginx:version-12
      name: custom-erpnext-nginx
      resources: {}
      volumeMounts:
        - mountPath: /var/www/html/sites
          name: sites-vol
        - mountPath: /assets
          name: assets-vol
  restartPolicy: OnFailure
  volumes:
    - name: sites-vol
      persistentVolumeClaim:
        claimName: sites-vol
    - name: assets-vol
      persistentVolumeClaim:
        claimName: assets-vol
status: {}
