Kube-ERP/erpnext-python-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/erpnext-offline-default: "true"
    io.kompose.service: erpnext-python
  name: erpnext-python
spec:
  containers:
    - env:
        - name: AUTO_MIGRATE
          value: "1"
        - name: MARIADB_HOST
          value: mariadb
        - name: REDIS_CACHE
          value: redis-cache:6379
        - name: REDIS_QUEUE
          value: redis-queue:6379
        - name: REDIS_SOCKETIO
          value: redis-socketio:6379
        - name: SOCKETIO_PORT
          value: "9000"
      image: shrdc/custom-erpnext-worker:version-12
      name: erpnext-python
      resources: {}
      volumeMounts:
        - mountPath: /home/frappe/frappe-bench/sites
          name: sites-vol
        - mountPath: /home/frappe/frappe-bench/sites/assets
          name: assets-vol
  restartPolicy: OnFailure
  volumes:
    - name: sites-vol
      persistentVolumeClaim:
        claimName: sites-vol
    - name: assets-vol
      persistentVolumeClaim:
        claimName: assets-vol
status: {}
