Kube-ERP/erpnext-schedule-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/erpnext-offline-default: "true"
    io.kompose.service: erpnext-schedule
  name: erpnext-schedule
spec:
  containers:
    - args:
        - schedule
      image: shrdc/custom-erpnext-worker:version-12
      name: erpnext-schedule
      resources: {}
      volumeMounts:
        - mountPath: /home/frappe/frappe-bench/sites
          name: sites-vol
  restartPolicy: OnFailure
  volumes:
    - name: sites-vol
      persistentVolumeClaim:
        claimName: sites-vol
status: {}
