Kube-ERP/redis-cache-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/erpnext-offline-default: "true"
    io.kompose.service: redis-cache
  name: redis-cache
spec:
  containers:
    - image: redis:latest
      name: redis-cache
      resources: {}
      volumeMounts:
        - mountPath: /data
          name: redis-cache-vol
  restartPolicy: OnFailure
  volumes:
    - name: redis-cache-vol
      persistentVolumeClaim:
        claimName: redis-cache-vol
status: {}
