Kube-ERP/site-creator-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/erpnext-offline-default: "true"
    io.kompose.service: site-creator
  name: site-creator
spec:
  containers:
    - args:
        - new
      image: shrdc/custom-erpnext-worker:version-12
      name: site-creator
      resources: {}
      volumeMounts:
        - mountPath: /home/frappe/frappe-bench/sites
          name: sites-vol
  restartPolicy: Never
  volumes:
    - name: sites-vol
      persistentVolumeClaim:
        claimName: sites-vol
status: {}
