Kube-ERP/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
    traefik.enable: "true"
  creationTimestamp: null
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: traefik
status:
  loadBalancer: {}
